# cmake-example

./: CMakeLists.txt  COPYRIGHT  README.md  main.cc  run.sh
ToDoCore/: CMakeLists.txt
ToDoCore/test/: CMakeLists.txt
cmake/Modules/: gtest.cmake
